# 3Dredner

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/calculation/: Coordinates.h  Interpolation.h  LineEdgeDetector.h  Matrix.h  Points.h  angle.h  gauss.h  linePoints.h  numericalAnalysis.h
include/format/: read.h
include/visualisation/: Scene.h  fromTo.h  show.h
include/visualisation/example/: cube.h  cylinder.h  distanceBetweenPoints.h
lib/: CMakeLists.txt
lib/foo/: CMakeLists.txt
lib/foo/src/: foo.cpp  foo.h
lib/foo/src/interfaces/: IFoo.h  IPrintable.h
src/: CMakeLists.txt  main.cpp
src/calculation/: Coordinates.cpp  LineEdgeDetector.cpp  Matrix.cpp  Points.cpp  angle.cpp  gauss.cpp  linePoints.cpp  numericalAnalysis.cpp
src/format/: read.cpp
src/visualisation/: Scene.cpp  fromTo.cpp  show.cpp
src/visualisation/example/: cube.cpp  cylinder.cpp  distanceBetweenPoints.cpp
src/world/: World.cpp
test/: CMakeLists.txt
test/application/mocks/: foo_mock.h
test/foo/: foo_tests.cpp
